General update to event handling & logging